2006-03-07  Eric Seidel  <eseidel@apple.com>

        Reviewed by hyatt.

        Fix basic text support.

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * platform/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawText):

2006-03-07  Dave Hyatt <hyatt@apple.com>

        Eliminate the unused parameters of the QString version of drawText.

        Reviewed by eric

        * platform/GraphicsContext.h:
        * platform/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawText):
        * platform/mac/GraphicsContextMac.mm:
        (WebCore::GraphicsContext::drawText):
        * rendering/render_image.cpp:
        (WebCore::RenderImage::paint):
        * rendering/render_list.cpp:
        (WebCore::RenderListMarker::paint):

2006-03-07  Eric Seidel  <eseidel@apple.com>

        Reviewed by hyatt.

        Add very basic text support.
        Sort a few more stubs.

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * platform/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::font):
        (WebCore::GraphicsContext::setFont):
        (WebCore::GraphicsContext::drawText):
        * platform/win/FontWin.cpp: Added.
        (WebCore::Font::drawText):
        * platform/win/TemporaryLinkStubs.cpp:
        (QComboBox::focusPolicy):
        (ScrollView::scrollXOffset):
        (Font::isFixedPitch):
        (Path::boundingRect):

2006-03-07  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt.

        - Fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=7319
        Can't see caret at the end of a contenteditable div with overflow:hidden

        No tests added since I don't think the blinking caret will show up in our tests.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::rightmostPosition): When calculating the rightmostPosition for editable blocks, 
        we need to account for the caret that can be drawn 1 px past the last child inline box.
