@@ -2,6 +2,15 @@
 
         Reviewed by hyatt.
 
+        Fix cursor support on win32.
+
+        * platform/win/WidgetWin.cpp:
+        (WebCore::Widget::setCursor):
+
+2006-03-07  Eric Seidel  <eseidel@apple.com>
+
+        Reviewed by hyatt.
+
         Fix basic text support.
 
         * WebCore.vcproj/WebCore/WebCore.vcproj:
